--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<h1> hi
-</h1>
-<p> blah </p>
+<!DOCTYPE html>
+<html>
+    <head> 
+        <title> Hi</title>
+    </head>
+    <body>
+        <p>hello</p>
+    </body>
+</html>
