added unordered list of todos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <title> Hi</title>
     </head>
     <body>
-        <p>hello</p>
+        <h1> homework </h1>
+            <ul>
+                <li> essay</li>
+                <li> project</li>
+                <li> reading</li>
+                <li> extra credit</li>
+                <li> notebook</li>
+            </ul>
     </body>
 </html>
