added checkbox to list items

--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title> Hi</title>
+        <title> school </title>
     </head>
     <body>
         <h1> homework </h1>
             <ul>
-                <li> essay</li>
-                <li> project</li>
-                <li> reading</li>
-                <li> extra credit</li>
-                <li> notebook</li>
+                <li>
+                    <input type="checkbox">
+                essay 
+                </li>
+                <li> 
+                    <input type="checkbox">
+                project 
+                </li>
+                <li> 
+                    <input type="checkbox">
+                reading 
+                </li>
+                <li> 
+                    <input type="checkbox">
+                extra credit </li>
+                <li> 
+                    <input type="checkbox">
+                notebook </li>
             </ul>
     </body>
 </html>
