--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
                     <input type="checkbox">
                 notebook </li>
             </ul>
-    </body>
+            <input type="text">
+            <input type="number">
+            </body>
 </html>
