--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="container">
         <h1> homework </h1>
             <ul>
                 <li>
@@ -28,5 +29,6 @@
             </ul>
             <input type="text">
             <input type="number">
+            </div>
             </body>
 </html>
