add color, border and font to list

--- a/index.html
+++ b/index.html
@@ -6,26 +6,33 @@
     </head>
     <body>
         <div class="container">
-        <h1> homework </h1>
+        <h1> Homework </h1>
             <ul>
                 <li>
                     <input type="checkbox">
-                essay 
+                Essay
+                    <span class="time-estimate"> 2 hours </span>
                 </li>
                 <li> 
                     <input type="checkbox">
-                project 
+                Project 
+                    <span class="time-estimate"> 4 hours </span>
                 </li>
                 <li> 
                     <input type="checkbox">
-                reading 
+                Reading 
+                    <span class="time-estimate"> 5 hours </span>
                 </li>
                 <li> 
                     <input type="checkbox">
-                extra credit </li>
+                Extra credit 
+                    <span class="time-estimate"> 1 hour</span>
+                </li>
                 <li> 
                     <input type="checkbox">
-                notebook </li>
+                Notebook 
+                    <span class="time-estimate"> 1 hour </span>
+                </li>
             </ul>
             <input type="text">
             <input type="number">
