--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <head> 
         <title> school </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
         <div class="container">
-        <h1> Homework </h1>
+        <h1> Homework <img id="homework-gif " src="https://media.giphy.com/media/tlf4VFxlx2pag/giphy.gif ">
+            </img> 
+            </h1>
             <ul>
                 <li>
                     <input type="checkbox">
