link show.html to index.html

--- a/show.html
+++ b/show.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
     <html>
         <head> <title> Show page</title>
-            <body>
-                <h2> Essay </h2>
-                <input type="checkbox">
-                <a href="#"> Edit</a>
-                <a href="#"> Delete</a>
-                <a href="#"> Go Back</a>
-            </body>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="show.css">
         </head>
+            <body>
+                <h1> Essay </h1>
+                <input type="checkbox">
+                <a id="edit_button" href="#"> Edit</a>
+                <a id="delete_button" href="#"> Delete</a>
+                <a id="goback_button" href="index.html"> Go Back</a>
+            </body>
+        
     </html>
