--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
             <ul>
                 <li>
                     <input type="checkbox">
-                Essay
+                    <a href="show.html">
+                Essay</a>
                     <span class="time-estimate"> 2 hours </span>
+                    
                 </li>
                 <li> 
                     <input type="checkbox">
