align calendar and to do list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             </img> 
             </h1>
             <ul>
+                <table>
+                    <tr>
+                        <th>
                 <li>
                     <input type="checkbox">
                     <a href="show.html">
@@ -41,5 +44,11 @@
             <input type="text">
             <input type="number">
             </div>
+                </th>
+                <th>
+            <iframe src="https://calendar.google.com/calendar/embed?src=q7ep3liclfvhb84u4v1rkvic68%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="750" height="550" frameborder="0" scrolling="no"></iframe>
+                </th>
+                </tr>
+            </table>
             </body>
 </html>
