--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <table>
                     <tr>
                         <th>
+                            <img id="motivation" src="https://media.giphy.com/media/pJu3xzRa2PzTq/giphy.gif"> </img>
                 <li>
                     <input type="checkbox">
                     <a href="show.html">
